# tof-calibration

./: CMakeLists.txt  MiceTofCalib.cc  MiceTofCalib.hh  README  TofT0Calib.cc  TofT0Calib.hh  TofTWCalib.cc  TofTWCalib.hh  TofTriggerCalib.cc  TofTriggerCalib.hh  calib.cpp  merge.C  run_tof_calib.sh  tofT0calib.txt  tofTWcalib.txt  tofTriggercalib.txt  tofcalibT0_trTOF1_july2014.txt  tofcalibTW_july2014.txt  tofcalibTrigger_trTOF1_july2014.txt  tofcalib_cards.txt  tofcalib_histos_july2014.root  tofcalibdata_july2014.root  upload-calib-to-cdb.py
